# undoc

./: Makefile  Makefile.am  README.md  configure.ac  undoc  undoc.spec.in
rpms/: undoc-1.0.0-1.src.rpm  undoc-1.0.0-1.x86_64.rpm  undoc-1.0.1-1.noarch.rpm  undoc-1.0.1-1.src.rpm
src/: Makefile.am  undoc
