#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([undoc], [1.0.1], [Tommy.Reynolds@MegaCoder.com])

AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
        undoc.spec
        Makefile
        src/Makefile
])
AC_OUTPUT
